<resources>
    <string name="app_name">Go4Lunch</string>
    <string name="title_map">map view</string>
    <string name="title_list">list view</string>
    <string name="title_workmates">Workmates</string>
    <string name="error_authentication_canceled">error</string>
    <string name="error_no_internet">No internet connection</string>
    <string name="error_unknown_error">unknown error</string>
    <string name="connection_succeed">connection succeed</string>
    <string name="your_lunch">Your lunch</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="open">Open left menu</string>
    <string name="close">Close left menu</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="user_profile_picture">user profile picture</string>
    <string name="separate_info">-</string>
    <string name="address">address</string>
    <string name="opening_hours">opening hours</string>
    <string name="type">type</string>
    <string name="distance">distance</string>
    <string name="num">num</string>
    <string name="restaurant_ratings">restaurant ratings</string>
    <string name="rating">rating</string>
    <string name="restaurant_image">restaurant image</string>
    <string name="call">Call</string>
    <string name="website">website</string>
    <string name="add_restaurant_button">add restaurant button</string>
    <string name="workmates_image">workmates image</string>
    <string name="workmates_infos">workmates infos</string>
    <string name="open_menu_button">open menu button</string>
    <string name="arrow_back">Arrow back</string>
    <string name="go4lunch">Go4Lunch</string>
    <string name="users_profile_pictures">Users profile pictures</string>
    <string name="your_lunch_fragment">Your lunch fragment</string>
    <string name="settings_fragment">Settings fragment</string>
    <string name="logout_fragment">Logout fragment</string>
    <string name="open_left_nav">Open Navigation Drawer</string>
    <string name="close_left_nav">Close Navigation Drawer</string>
    <string name="logo_left_nav_drawer">Logo left nav drawer</string>
    <string name="info_no_email_found">No email found</string>
    <string name="info_no_username_found">No username found</string>
    <string name="notifications">Notifications</string>
    <string name="save">Save</string>
    <string name="default_notification_channel_id">go4Lunch</string>
    <string name="settings_arrow_back">Settings arrow back</string>
    <string name="search_button">Search button</string>
    <string name="oui">Oui</string>
    <string name="non">Non</string>
    <string name="current_location">Vous êtes ici !</string>
    <string name="authorize_location">S\'il vous plaît, autoriser la localisation dans les parametre de votre app</string>
    <string name="not_decided">Vous n\\\'avez pas encore choisis de restaurant pour aujourd-hui !</string>
    <string name="logout_confirmation">Voulez-vous vraiment vous déconnecter ?</string>
    <string name="search_restaurant">Rechercher un restaurant…</string>
    <string name="left_nav_drawer">Left nav drawer</string>
    <string name="some_distance">some distance</string>
    <string name="ouvert">Ouvert</string>
    <string name="ferme">Fermé</string>
    <string name="call_restaurant_question">Voulez-vous vraiment appeler ce restaurant ?</string>
    <string name="image_of_the_restaurant">image of the restaurant</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="open_page_detailed">Voulez-vous vraiment ouvrir la page détaillé de ce restaurant ?</string>
    <string name="restaurant_address">restaurant_address</string>
    <string name="search_restaurant_btn">Button to search restaurant</string>
    <string name="button_filter">button filter</string>
    <string name="rating_filter">Filter par rating</string>
    <string name="distance_filter">Filter par distance</string>
    <string name="alphabetical_filter">Filter par ordre alphabetique</string>
    <string name="reset_filter">reinitialiser les filtres</string>
    <string name="workmates_filter">Filtrer par nombres de collègues</string>
    <string name="liked">Liked</string>
    <string name="like">Like</string>
    <string name="password">Mot de passe</string>
    <string name="connexion">Connexion</string>
    <string name="workmates_search">recherchez un collègue</string>
    <string name="restaurant_not_selected_alert">Veuillez d\'abord séléctionner un restaurant pour aujourd\'hui !</string>
    <string name="left_nav_logo">left nav logo</string>

</resources>