<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/orange"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <ImageButton
                android:id="@+id/autocomplete_search_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:src="@drawable/baseline_search_24"
                android:layout_marginEnd="5dp"
                android:background="@color/fui_transparent"
                android:contentDescription="@string/search_restaurant" />

            <androidx.cardview.widget.CardView
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
                android:id="@+id/autocomplete_container"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:visibility="gone"
                android:background="@color/white"
                app:cardCornerRadius="10dp">

                <fragment
                    android:id="@+id/autocomplete_fragment"
                    android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:layout="@android:layout/simple_selectable_list_item"/>

            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.SearchView
                android:id="@+id/workmates_searchView"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:visibility="gone"/>

        </androidx.appcompat.widget.Toolbar>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/nav_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:background="?android:attr/windowBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:menu="@menu/bottom_nav_menu" />

        <fragment
            android:id="@+id/nav_host_fragment"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="@id/nav_view"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navGraph="@navigation/mobile_navigation"
            tools:layout="@android:layout/simple_selectable_list_item" />

    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/left_nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:backgroundTint="@color/orange"
        app:headerLayout="@layout/left_nav_header"
        app:itemIconSize="30dp"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:menu="@menu/left_nav_menu">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="48dp"
            android:contentDescription="@string/logo_left_nav_drawer"
            android:src="@drawable/logo_go4lunch" />


    </com.google.android.material.navigation.NavigationView>



</androidx.drawerlayout.widget.DrawerLayout>

