<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/baseline_map_24"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_list"
        android:icon="@drawable/baseline_view_list_24"
        android:title="@string/title_list" />

    <item
        android:id="@+id/navigation_workmates"
        android:icon="@drawable/baseline_group_24"
        android:title="@string/title_workmates" />

</menu>